cheating: factor.c from coreutils-8.32
It gives us 5 time faster speed than SageMath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ find_package(mp++ REQUIRED)
 find_package(Threads)
 
 add_executable(ord23 main.cpp
-    utils.cpp utils.h)
+    utils.cpp utils.h
+    factor.cpp factor.h longlong.h primes.h)
 
 target_link_libraries(ord23 mp++::mp++ Threads::Threads)
 
 add_executable(tests tests.cpp
     utils.cpp utils.h
+    factor.cpp factor.h
     catch.cpp catch.hpp)
 
 target_link_libraries(tests mp++::mp++ Threads::Threads)
