Getitng rid of the mp++ dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ set(CMAKE_CXX_FLAGS_RELEASE "-march=native -mtune=native -O3 -mmmx -msse -msse2 
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-find_package(mp++ REQUIRED)
 find_package(Threads)
 
 include(FetchContent)
@@ -24,14 +23,14 @@ add_executable(ord23 main.cpp
     utils.cpp utils.h
     factor.cpp factor.h longlong.h primes.h)
 
-target_link_libraries(ord23 mp++::mp++ Threads::Threads)
+target_link_libraries(ord23 Threads::Threads)
 
 add_executable(tests tests.cpp
     utils.cpp utils.h
     factor.cpp factor.h
     catch.cpp catch.hpp)
 
-target_link_libraries(tests mp++::mp++ Threads::Threads)
+target_link_libraries(tests Threads::Threads)
 
 add_executable(profiling profiling.cpp
                nanobench.h
